# Khwarizmi_Engine

./: CMakeLists.txt  README.md  run.sh
khwarizmi_engine/: CMakeLists.txt  khwarizmi_engine.cpp
khwarizmi_engine/design/: design.md
khwarizmi_engine/physics/: physics_design.md
khwarizmi_engine/stop_watch/: stop_watch.hpp
